# pykek

./: README.md  main.py  pyproject.toml
pykek/backend/: addon.py  config.py  game_instance.py
pykek/frontend/: addon_row.py  addons.py  git_dialog.py  onboarding.py  window.py
pykek/frontend/git/: dialog.py  dialog_coordinator.py  download_page.py  final_page.py  setup_page.py
pykek/tests/backend/: test_addon.py  test_config.py  test_game_instance.py
